fix: adjust margin for benefit group for better alignment

--- a/CSS/Welcome.css
+++ b/CSS/Welcome.css
@@ -115,7 +115,7 @@ p.benefit:nth-child(4) {
   display: flex;
   justify-content: space-between;
   width: 1088px;
-  margin: 25px auto 0;
+  margin: 0 auto 0;
 }
 
 p.detail {
